--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -23,11 +23,16 @@
       <div class="row text-center">
         <div class="col m-8">
           <ul class="collection">
+            <% if(events.length) { %>
             <% events.forEach(function(item) { %>
             <li class="collection-item">
               <p><strong><%= item.start.dateTime %> - <%= item.summary %> - <%=item.end.dateTime%> </strong></p>
             </li>
             <% }); %>
+            <% } %>
+            <% if(!events.length) { %>
+              <h3>No Upcoming events found</h3>
+              <% } %>
           </ul>
         </div>
       </div>
